@@ -296,6 +296,7 @@ Chat (MeetMe/Conference):
             exten => s,1,capicommand(chat|salesmeeting|m|1,3-6)
     Possible options:
     'm' = The first caller will get music-on-hold until second caller arrives.
+    'h<sec>' = Hangup after <sec> seconds if caller is alone in conference.
     'o' = The caller is operator
     'l' = The caller is listener
 
