@@ -874,6 +874,7 @@ capicommand(chat|<roomname>|<options>|controller)
   roomname - conference room name
   options
       m - The first caller will get music-on-hold until the second caller arrives
+      h<sec> - Hangup after <sec> seconds if caller is alone in conference.
       l - The caller is listener (passive) conference member and cannot be unmuted by 'chat_mute' command
       o - The caller is conference operator and cannot be muted by 'chat_mute' command
   controller - CAPI controller
@@ -884,6 +885,7 @@ exten => s,n,capicommand(chat|test|m|1,3)
 exten => s,n,capicommand(chat|test|m|1-4)
 exten => s,n,capicommand(chat|test|m|1-4,7)
 exten => s,n,capicommand(chat|test|m|1-4,7-10)
+exten => s,n,capicommand(chat|test|mh300|1-4)
 
 IVR example:
 /////////////////////////////////////////////////////////////////////
